--- a/index.html
+++ b/index.html
@@ -1,13 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <title>Area Event Finder</title>
-</head>
-<body>
-    <script src="assets/js/script.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <!--Import Google Icon Font-->
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <!--Import materialize.css-->
+        <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+        <!--Let browser know website is optimized for mobile-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <link rel="stylesheet" href="assets/css/style.css">
+        <title>Area Event Finder</title>
+    </head>
+    <body>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="assets/js/script.js"></script>
+
+        <input type="checkbox" id="searchMusician" name="musician">Search by Musician
+        <input type="checkbox" id="searchCity" name="city">Search by City<br>
+
+        <label for="musicianInput">Musician Name: </label>
+        <input id="musicianInput" type="text"><br>
+        <label for="cityInput">City Name: </label>
+        <input id="cityInput" type="text"><br>
+
+        <button id="searchBtn" type="submit">Search</button>
+
+        <div id="result">
+            <div id="musicianName"></div>
+            <div id="musicianImg"></div>
+            <div id="eventDate"></div>
+            <div id="eventTime"></div>
+            <div id="eventURL"></div>
+            <div id="venueName"></div>
+            <div id="venueCity"></div>
+            <div id="venueCountry"></div>
+            <div id="veueURL"></div>
+        </div>
+        
+        <!--JavaScript at end of body for optimized loading-->
+        <script type="text/javascript" src="js/materialize.min.js"></script>
+    </body>
 </html>
