--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <!--Import Google Icon Font-->
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <!--Import materialize.css-->
-        <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+        <link type="text/css" rel="stylesheet" href="assets/css/materialize.min.css"  media="screen,projection"/>
         <!--Let browser know website is optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" href="assets/css/style.css">
@@ -25,7 +25,10 @@
         <label for="cityInput">City Name: </label>
         <input id="cityInput" type="text"><br>
 
-        <button id="searchBtn" type="submit">Search</button>
+        <!-- <button id="searchBtn" type="submit">Search</button> -->
+        <button class="btn waves-effect waves-light" type="submit" name="action">Search
+            <i class="material-icons right">search</i>
+        </button>
 
         <div id="result">
             <div id="musicianName"></div>
@@ -40,6 +43,6 @@
         </div>
         
         <!--JavaScript at end of body for optimized loading-->
-        <script type="text/javascript" src="js/materialize.min.js"></script>
+        <script type="text/javascript" src="assets/js/materialize.min.js"></script>
     </body>
 </html>
