--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <!--Import Google Icon Font-->
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
         <!--Import materialize.css-->
-        <link type="text/css" rel="stylesheet" href="assets/css/materialize.min.css"  media="screen,projection"/>
+        <!-- <link type="text/css" rel="stylesheet" href="assets/css/materialize.min.css"  media="screen,projection"/> -->
         <!--Let browser know website is optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" href="assets/css/style.css">
@@ -24,25 +24,26 @@
         <input id="musicianInput" type="text"><br>
         <label for="cityInput">City Name: </label>
         <input id="cityInput" type="text"><br>
+        <div id="errorMsg"></div>
 
-        <!-- <button id="searchBtn" type="submit">Search</button> -->
-        <button class="btn waves-effect waves-light" type="submit" name="action">Search
+        <button id="searchBtn" type="submit">Search</button>
+        <!-- <button class="btn waves-effect waves-light" type="submit" name="action">Search
             <i class="material-icons right">search</i>
-        </button>
+        </button> -->
 
-        <div id="result">
+        <!-- <div id="result">
             <div id="musicianName"></div>
             <div id="musicianImg"></div>
+            <div id="eventURL"></div>
             <div id="eventDate"></div>
             <div id="eventTime"></div>
-            <div id="eventURL"></div>
             <div id="venueName"></div>
             <div id="venueCity"></div>
             <div id="venueCountry"></div>
             <div id="veueURL"></div>
-        </div>
+        </div> -->
         
         <!--JavaScript at end of body for optimized loading-->
-        <script type="text/javascript" src="assets/js/materialize.min.js"></script>
+        <!-- <script type="text/javascript" src="assets/js/materialize.min.js"></script> -->
     </body>
 </html>
