Fixed the checkboxes.

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         <div class="ui container">
             <div class="ui form">
                 <div class="ui checkbox">
-                    <input type="checkbox" name="musician" />
-                    <label>Search by Musician</label>
+                    <input id="musicianCheckBox" type="checkbox" name="musician" />
+                    <label for="musicianCheckBox">Search by Musician</label>
                 </div>
 
                 <div class="ui checkbox">
-                    <input type="checkbox" name="city" />
-                    <label>Search by City</label>
+                    <input id="cityCheckBox" type="checkbox" name="city" />
+                    <label for="cityCheckBox">Search by City</label>
                 </div>
                 <br>
                 <br>
