Formatted event date and time with moment.js.

--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB5CY7yODBMjjWjHL6QD5QR2F4I3d_1NjM&callback=initMap" async defer></script> 
          <!-- Googl Places API  -->
         <!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB5CY7yODBMjjWjHL6QD5QR2F4I3d_1NjM&libraries=places"></script> -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     </div>
 </body>
 
