--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
     </head>
     <body>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <!-- Semantic UI -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
+        <!-- Moment.ms -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+        <!-- Google Map API -->
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB5CY7yODBMjjWjHL6QD5QR2F4I3d_1NjM&callback=initMap" type="text/javascript"></script> 
         <script src="assets/js/script.js"></script>
         
         <div id="headerDiv" class="ui fixed inverted menu">
@@ -108,8 +113,6 @@
             </div>
         </div>
 
-        <!-- <div id="map"></div> -->
-
         <!-- Modal to display map -->
         <div id="mapModal" class="ui modal">
             <i class="close icon"></i>
@@ -121,21 +124,9 @@
             </div>
         </div>
 
-        <!-- <script>
-            var map;
-            function initMap() {
-                map = new google.maps.Map($("#map"), {
-                    center: {lat: -34.397, lng: 150.644},
-                    zoom: 8
-                });
-            }
-        </script> -->
-   
-        <!-- Google Map API -->
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB5CY7yODBMjjWjHL6QD5QR2F4I3d_1NjM&callback=initMap" async defer></script> 
-         <!-- Googl Places API  -->
+        
+        <!-- Googl Places API  -->
         <!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB5CY7yODBMjjWjHL6QD5QR2F4I3d_1NjM&libraries=places"></script> -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     </div>
 </body>
 
