Created the array to contain the event venue's location and name to display the map.

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <!-- Modal to display a map -->
         <div id="mapModal" class="ui modal">
             <i class="close icon"></i>
-            <div class="header">
+            <div id="mapHeader" class="header">
                 Map
             </div>
             <div id="mapContent" class="content">
