Fixed the latlng error at the loading.

--- a/index.html
+++ b/index.html
@@ -115,6 +115,16 @@
                 </div>
                 <br>
 
+                <!-- date/time picker -->
+                <label>Date/Time</label>
+                <div id="dateTime" class="ui calendar">
+                  <div class="ui input left icon">
+                    <i class="calendar icon"></i>
+                    <input type="text" placeholder="Date/Time">
+                  </div>
+                </div>
+                <br/>
+
                 <div id="errorMsg"></div>
 
                 <button id="searchBtn" class="ui primary button" type="submit">Search </button>
