Added functionality to open the ticket website by clicking on the event division instead of the ticket info link.

--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
         <!-- Google Map API -->
         <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB5CY7yODBMjjWjHL6QD5QR2F4I3d_1NjM&callback=initMap" type="text/javascript"></script>
                
-        <!-- Googl Places API  -->
-        <!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB5CY7yODBMjjWjHL6QD5QR2F4I3d_1NjM&libraries=places"></script> -->
+        <!-- Googl Places API 
+        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB5CY7yODBMjjWjHL6QD5QR2F4I3d_1NjM&libraries=places"></script> -->
     </div>
 </body>
 
