--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <br>
         <div class="ui container">
             <div class="ui form">                
-                <label for="musicianInput">Musician Name </label>
+                <label for="musicianInput">Musician / Venue</label>
                 <input id="musicianInput" type="text">
                 <br>
                 <br>
