Updated the app image. Changed the app name shown in the header.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <script src="assets/js/script.js"></script>
         
         <div id="headerDiv" class="ui fixed inverted menu">
-            <h1>Music Event Search</h1>
+            <h1>EMA Music</h1>
         </div>
         <br>
         <br>
