--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <br>
         <div class="ui container">
             <br>
-            <img src="assets/images/EMA-Music.jpg" class="center" alt="EMA Music">
+            <!-- <img src="assets/images/EMA-Music.jpg" class="center" alt="EMA Music"> -->
             <div class="ui form">                
                 <label for="musicianInput">Musician / Venue</label>
                 <input id="musicianInput" type="text">
